--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -61,7 +61,7 @@ slow_query:
     txn_start_ts_tooltip: Transaction start timestamp, a.k.a. Transaction ID
     write_keys: Write Keys
     write_size: Write Size
-    prewrite_region: Prewrite Region
+    prewrite_region: Prewrite Regions
     txn_retry: Transaction Retries
 
     prev_stmt: Previous Query
