--- a/ui/lib/client/translations/en.yaml
+++ b/ui/lib/client/translations/en.yaml
@@ -7,3 +7,8 @@ error:
       signin:
         invalid_code: Authorization Code is invalid or expired
     other: Other error
+  tidb:
+    no_alive_tidb: No live TiDB instance in the cluster
+    pd_access_failed: Failed to access PD node
+    tidb_conn_failed: Failed to connect to TiDB
+    tidb_auth_failed: TiDB authentication failed
