--- a/ui/lib/client/translations/zh.yaml
+++ b/ui/lib/client/translations/zh.yaml
@@ -7,3 +7,8 @@ error:
       signin:
         invalid_code: 授权码无效或已过期
     other: 其他错误
+  tidb:
+    no_alive_tidb: 集群未启动 TiDB 实例
+    pd_access_failed: 无法访问 PD 节点
+    tidb_conn_failed: 无法连接到 TiDB
+    tidb_auth_failed: TiDB 登录验证失败
