--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -13,6 +13,8 @@ slow_query:
     query_time_tooltip: Execution time of the query
     memory_max: Max Memory
     memory_max_tooltip: Maximum memory usage of the query
+    disk_max: Max Disk
+    disk_max_tooltip: Maximum disk usage of the query
     digest: Query Template ID
     digest_tooltip: a.k.a. Query digest
     is_internal: Is Internal?
