refine download csv experience in ui

--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -37,7 +37,8 @@ statement:
           recent: Recent
           usual_time_ranges: Common
           custom_time_ranges: Custom
-        export: export
+        export: Export
+        exporting: Exporting
   settings:
     title: Settings
     disabled_result:
