--- a/ui/lib/apps/Statement/translations/zh.yaml
+++ b/ui/lib/apps/Statement/translations/zh.yaml
@@ -37,6 +37,8 @@ statement:
           recent: 最近
           usual_time_ranges: 常用时间范围
           custom_time_ranges: 自定义时间范围
+        export: 导出
+        exporting: 正在导出
   settings:
     title: 设置
     disabled_result:
