--- a/ui/lib/client/translations/en.yaml
+++ b/ui/lib/client/translations/en.yaml
@@ -3,6 +3,7 @@ error:
   network: Network connection error
   api:
     unauthorized: Session is expired. Please sign in again.
+    invalid_request: Bad Request
     user:
       signin:
         invalid_code: Authorization Code is invalid or expired
