--- a/ui/lib/client/translations/zh.yaml
+++ b/ui/lib/client/translations/zh.yaml
@@ -3,6 +3,7 @@ error:
   network: 网络连接失败
   api:
     unauthorized: 会话已过期，请重新登录
+    invalid_request: 请求出错
     user:
       signin:
         invalid_code: 授权码无效或已过期
