--- a/ui/lib/apps/UserProfile/translations/en.yaml
+++ b/ui/lib/apps/UserProfile/translations/en.yaml
@@ -1,4 +1,6 @@
 user_profile:
+  service_endpoints:
+    title: Service Endpoints
   i18n:
     title: Language & Localization
     language: Language
