--- a/ui/lib/client/translations/en.yaml
+++ b/ui/lib/client/translations/en.yaml
@@ -3,9 +3,14 @@ error:
   network: Network connection error
   api:
     unauthorized: Session is expired. Please sign in again.
+    invalid_request: Bad Request
     user:
       signin:
         invalid_code: Authorization Code is invalid or expired
+    slow_query:
+      export_no_data: No slow queires can be exported
+    statement:
+      export_no_data: No statements can be exported
     other: Other error
   tidb:
     no_alive_tidb: No live TiDB instance in the cluster
