Polish some translations
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/lib/apps/UserProfile/translations/en.yaml
+++ b/ui/lib/apps/UserProfile/translations/en.yaml
@@ -2,15 +2,15 @@ user_profile:
   service_endpoints:
     title: Service Endpoints
     prometheus:
-      title: Prometheus Source
+      title: Prometheus Data Source
       form:
         deployed: Use deployed address
         not_deployed: Prometheus is not deployed
-        custom: Custom
+        custom: Use customized address
         update: Update
         cancel: Cancel
       custom_form:
-        address: Custom Prometheus Address
+        address: Customize Prometheus Address
   i18n:
     title: Language & Localization
     language: Language
