--- a/ui/lib/apps/UserProfile/translations/zh.yaml
+++ b/ui/lib/apps/UserProfile/translations/zh.yaml
@@ -4,9 +4,9 @@ user_profile:
     prometheus:
       title: Prometheus 数据源
       form:
-        deployed: 使用已部署的 Prometheus 地址
+        deployed: 使用已部署的组件地址
         not_deployed: 未部署 Prometheus 组件
-        custom: 自定义地址
+        custom: 使用自定义地址
         update: 更新
         cancel: 取消
       custom_form:
