add exec retry time
Signed-off-by: crazycs520 <crazycs520@gmail.com>

--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -58,7 +58,9 @@ slow_query:
     query_time2: Query Time
     query_time2_tooltip: The execution time of a query (due to the parallel execution, it may be significantly smaller than the above time)
     write_sql_response_total: Send response Time
-    write_sql_response_total_tooltip: Time consumed when sending response to the client.
+    write_sql_response_total_tooltip: Time consumed when sending response to the client
+    exec_retry_time: Retry execution Time
+    exec_retry_time_tooltip: Time consumed of retry execution
 
     request_count: Request Count
     process_keys: Process Keys
