--- a/ui/lib/apps/SlowQuery/translations/zh.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh.yaml
@@ -61,6 +61,8 @@ slow_query:
     query_time2_tooltip: 由于存在并行执行，因此 SQL 执行时间可能远小于上述各项时间
     write_sql_response_total: 发送结果耗时
     write_sql_response_total_tooltip: 发送 SQL 结果给客户端的耗时
+    exec_retry_time: 执行重试耗时
+    exec_retry_time_tooltip: 执行失败时时执行重试耗时
 
     request_count: Coprocessor 请求数
     process_keys: 可见版本数
