--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -34,35 +34,35 @@ slow_query:
     db: Execution Database
     db_tooltip: The database used to execute the query
 
-    parse_time: Parse Time
-    parse_time_tooltip: Time consumed when parsing the query
-    compile_time: Generate plan Time
-    compile_time_tooltip: Time consumed when generating plan of the query
-    rewrite_time: Rewrite plan Time
-    preproc_subqueries_time: Preprocess subquery Time
-    optimize_time: Optimize plan Time
-    cop_time: Cop request Time
-    lock_keys_time: Lock keys Time
-    lock_keys_time_tooltip: Time consumed when locking keys in pessimistic transaction
-    wait_time: Coprocessor Wait Time
-    process_time: Coprocessor Process Time
-    backoff_time: Backoff Retry Time
-    backoff_time_tooltip: The waiting time before retry when a query encounters errors that require a retry
-    get_commit_ts_time: Get Commit Ts Time
-    local_latch_wait_time: Local Latch Wait Time
-    resolve_lock_time: Resolve Lock Time
-    prewrite_time: Prewrite Time
-    wait_prewrite_binlog_time: Wait binlog prewrite Time
-    commit_time: Commit Time
-    commit_backoff_time: Commit Backoff Time
     query_time2: Query Time
     query_time2_tooltip: The execution time of a query (due to the parallel execution, it may be significantly smaller than the above time)
+    parse_time: 　　Parse Time
+    parse_time_tooltip: Time consumed when parsing the query
+    compile_time: 　　Generate plan Time
+    compile_time_tooltip: Time consumed when generating plan of the query
+    rewrite_time: 　　　　Rewrite plan Time
+    preproc_subqueries_time: 　　　　　　Preprocess subquery Time
+    optimize_time: 　　　　Optimize plan Time
+    wait_ts: 　　Wait Txn StartTS Time
+    wait_ts_tooltip: Time consumed of waiting transaction start ts
+    cop_time: 　　Coprocessor request Time
+    wait_time: 　　　　Coprocessor Wait Time
+    process_time: 　　　　Coprocessor Process Time
+    backoff_time: 　　Backoff Retry Time
+    backoff_time_tooltip: The waiting time before retry when a query encounters errors that require a retry
+    lock_keys_time: 　　Lock keys Time
+    lock_keys_time_tooltip: Time consumed when locking keys in pessimistic transaction
+    get_commit_ts_time: 　　Get Commit Ts Time
+    local_latch_wait_time: 　　Local Latch Wait Time
+    resolve_lock_time: 　　Resolve Lock Time
+    prewrite_time: 　　Prewrite Time
+    wait_prewrite_binlog_time: 　　Wait binlog prewrite Time
+    commit_time: 　　Commit Time
+    commit_backoff_time: 　　Commit Backoff Time
     write_sql_response_total: Send response Time
     write_sql_response_total_tooltip: Time consumed when sending response to the client
     exec_retry_time: Retry execution Time
     exec_retry_time_tooltip: Time consumed of retry execution
-    wait_ts: Wait Txn StartTS Time
-    wait_ts_tooltip: Time consumed of waiting transaction start ts
 
     request_count: Request Count
     process_keys: Process Keys
