--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -40,7 +40,7 @@ slow_query:
     parse_time_tooltip: Time consumed when parsing the query
     compile_time: 　　Generate Plan Time
     compile_time_tooltip: Time consumed when generating plan of the query
-    rewrite_time: 　　　　Rewrite plan Time
+    rewrite_time: 　　　　Rewrite Plan Time
     preproc_subqueries_time: 　　　　　　Preprocess subquery Time
     preproc_subqueries_time_tooltip: The time consumed of pre-process the subquery during the rewrite plan phase
     optimize_time: 　　　　Optimize plan Time
