--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -67,7 +67,7 @@ slow_query:
     wait_prewrite_binlog_time: 　　Wait binlog prewrite Time
     wait_prewrite_binlog_time_tooltip: The duration of waiting prewrite binlog finish
     commit_time: 　　Commit Time
-    commit_time_tooltip: The duration of the second phase (commit) of the two-phase transaction commit
+    commit_time_tooltip: Time consumed in 2PC commit phase when transaction commits
     commit_backoff_time: 　　Commit Backoff Time
     commit_backoff_time_tooltip: Total backoff waiting time when 2PC commit encounters errors when transaction commits
     write_sql_response_total: Send response Time
