--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -48,7 +48,7 @@ slow_query:
     cop_time: 　　Coprocessor Request Time
     cop_time_tooltip: Time consumed of TiDB sending cop request
     wait_time: 　　　　Coprocessor Wait Time
-    wait_time_tooltip: The total waiting time of cop request in TiKV. Because the Coprocessor of TiKV runs a limited number of threads, cop requests might queue up when all threads of Coprocessor are working
+    wait_time_tooltip: The total waiting time of cop request in TiKV.
     process_time: 　　　　Coprocessor Process Time
     process_time_tooltip: The total processing time of a SQL statement in TiKV. Because data is sent to TiKV concurrently, this value might exceed the query time
     backoff_time: 　　Backoff Retry Time
