--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -58,7 +58,7 @@ slow_query:
     get_commit_ts_time: 　　Get Commit Ts Time
     get_commit_ts_time_tooltip: Time consumed when getting a commit timestamp for 2PC commit phase when transaction commits
     local_latch_wait_time: 　　Local Latch Wait Time
-    local_latch_wait_time_tooltip: The time that TiDB spends on waiting for the lock before the second phase (commit) of the two-phase transaction commit
+    local_latch_wait_time_tooltip: Time consumed when TiDB waits for the lock in the current TiDB instance before 2PC commit phase when transaction commits
     resolve_lock_time: 　　Resolve Lock Time
     resolve_lock_time_tooltip: The time that TiDB resolves locks when prewrite encounters locks.
     prewrite_time: 　　Prewrite Time
