--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -60,7 +60,7 @@ slow_query:
     local_latch_wait_time: 　　Local Latch Wait Time
     local_latch_wait_time_tooltip: Time consumed when TiDB waits for the lock in the current TiDB instance before 2PC commit phase when transaction commits
     resolve_lock_time: 　　Resolve Lock Time
-    resolve_lock_time_tooltip: The time that TiDB resolves locks when prewrite encounters locks.
+    resolve_lock_time_tooltip: Time consumed when TiDB resolves locks from other transactions in 2PC prewrite phase when transaction commits
     prewrite_time: 　　Prewrite Time
     prewrite_time_tooltip: The duration of the first phase (prewrite) of the two-phase transaction commit
     wait_prewrite_binlog_time: 　　Wait binlog prewrite Time
