--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -62,7 +62,7 @@ slow_query:
     resolve_lock_time: 　　Resolve Lock Time
     resolve_lock_time_tooltip: Time consumed when TiDB resolves locks from other transactions in 2PC prewrite phase when transaction commits
     prewrite_time: 　　Prewrite Time
-    prewrite_time_tooltip: The duration of the first phase (prewrite) of the two-phase transaction commit
+    prewrite_time_tooltip: Time consumed in 2PC prewrite phase when transaction commits
     wait_prewrite_binlog_time: 　　Wait binlog prewrite Time
     wait_prewrite_binlog_time_tooltip: The duration of waiting prewrite binlog finish
     commit_time: 　　Commit Time
