--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -64,7 +64,7 @@ slow_query:
     prewrite_time: 　　Prewrite Time
     prewrite_time_tooltip: Time consumed in 2PC prewrite phase when transaction commits
     wait_prewrite_binlog_time: 　　Wait Binlog Prewrite Time
-    wait_prewrite_binlog_time_tooltip: The duration of waiting prewrite binlog finish
+    wait_prewrite_binlog_time_tooltip: Time consumed when waiting Binlog prewrite to finish
     commit_time: 　　Commit Time
     commit_time_tooltip: Time consumed in 2PC commit phase when transaction commits
     commit_backoff_time: 　　Commit Backoff Time
