--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -44,7 +44,7 @@ slow_query:
     preproc_subqueries_time_tooltip: The time consumed of pre-process the subquery during the rewrite plan phase
     optimize_time: 　　　　Optimize Plan Time
     wait_ts: 　　Wait Txn StartTS Time
-    wait_ts_tooltip: Time consumed of waiting transaction start ts
+    wait_ts_tooltip: Time consumed of retrieving transaction start ts
     cop_time: 　　Coprocessor Request Time
     cop_time_tooltip: Time consumed of TiDB sending cop request
     wait_time: 　　　　Coprocessor Wait Time
