--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -48,7 +48,7 @@ slow_query:
     cop_time: 　　Coprocessor Executor Time
     cop_time_tooltip: Time consumed of TiDB executing cop request
     wait_time: 　　　　Coprocessor Wait Time
-    wait_time_tooltip: The total waiting time of cop request in TiKV.
+    wait_time_tooltip: The total waiting time of cop request in TiKV
     process_time: 　　　　Coprocessor Process Time
     process_time_tooltip: The total execution time of a SQL statement executed in TiKV. Because TiKV process SQL statement partials concurrently, this value can exceed the query time
     backoff_time: 　　Backoff Retry Time
