--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -35,24 +35,24 @@ slow_query:
     db_tooltip: The database used to execute the query
 
     query_time2: Query Time
-    query_time2_tooltip: The execution time of a query (due to the parallel execution, it may be significantly smaller than the following time)
+    query_time2_tooltip: The elapsed wall time when execution the query
     parse_time: 　　Parse Time
     parse_time_tooltip: Time consumed when parsing the query
     compile_time: 　　Generate Plan Time
     rewrite_time: 　　　　Rewrite Plan Time
     preproc_subqueries_time: 　　　　　　Preprocess Sub-Query Time
-    preproc_subqueries_time_tooltip: The time consumed of pre-process the subquery during the rewrite plan phase
+    preproc_subqueries_time_tooltip: Time consumed when pre-processing the subquery during the rewrite plan phase
     optimize_time: 　　　　Optimize Plan Time
-    wait_ts: 　　Get Txn Start Ts Time
-    wait_ts_tooltip: Time consumed of retrieving transaction start ts
+    wait_ts: 　　Get Start Ts Time
+    wait_ts_tooltip: Time consumed of retrieving the transaction start timestamp when transaction begins
     cop_time: 　　Coprocessor Executor Time
-    cop_time_tooltip: Time consumed of TiDB executing cop request
+    cop_time_tooltip: The elapsed wall time when TiDB Coprocessor executor waiting all Coprocessor requests to finish (note: when there are JOIN in SQL statement, multiple TiDB Coprocessor executors may be running in parallel, which may cause this time not being a wall time)
     wait_time: 　　　　Coprocessor Wait Time
-    wait_time_tooltip: The total waiting time of cop request in TiKV
+    wait_time_tooltip: The total waiting time of Coprocessor request in TiKV
     process_time: 　　　　Coprocessor Process Time
-    process_time_tooltip: The total execution time of a SQL statement executed in TiKV. Because TiKV process SQL statement partials concurrently, this value can exceed the query time
+    process_time_tooltip: The total time of Coprocessor request being executed in TiKV (note: TiKV executes requests in parallel so that this is not a wall time)
     backoff_time: 　　Backoff Retry Time
-    backoff_time_tooltip: The waiting time before retry when a query encounters errors that require a retry
+    backoff_time_tooltip: The total waiting time before retry when a query encounters errors and requires a retry (note: there may be multiple backoff running in parallel so that this may not be a wall time)
     lock_keys_time: 　　Lock Keys Time
     lock_keys_time_tooltip: Time consumed when locking keys in pessimistic transaction
     get_commit_ts_time: 　　Get Commit Ts Time
