--- a/ui/lib/apps/SlowQuery/translations/zh.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh.yaml
@@ -35,7 +35,7 @@ slow_query:
     db_tooltip: 执行该 SQL 查询时使用的数据库名称
 
     query_time2: SQL 执行时间
-    query_time2_tooltip: 由于存在并行执行，因此 SQL 执行时间可能远小于以下各项时间
+    query_time2_tooltip: 执行 SQL 耗费的自然时间
     parse_time: 　　解析耗时
     parse_time_tooltip: 解析该 SQL 查询的耗时
     compile_time: 　　生成执行计划耗时
@@ -48,15 +48,15 @@ slow_query:
     wait_ts: 　　取事务 Start Ts 耗时
     wait_ts_tooltip: 从 PD 取事务开始时间戳步骤的耗时
     cop_time: 　　Coprocessor 执行耗时
-    cop_time_tooltip: TiDB 执行 cop 请求的耗时
+    cop_time_tooltip: TiDB Coprocessor 算子等待所有任务在 TiKV 上并行执行完毕耗费的自然时间（注：当 SQL 语句中包含 JOIN 时，多个 TiDB Coprocessor 算子可能会并行执行，此时不再等同于自然时间）
     wait_time: 　　　　Coprocessor 累计等待耗时
-    wait_time_tooltip: 在 TiKV Coprocessor 的等待时间之和
+    wait_time_tooltip: TiKV 准备并等待 Coprocessor 任务执行的累计时间
     process_time: 　　　　Coprocessor 累计执行耗时
-    process_time_tooltip: 在 TiKV Coprocessor 的处理时间之和，因为请求会并行的发到 TiKV 执行，这个值可能会超过 SQL 执行时间
+    process_time_tooltip: TiKV 执行 Coprocessor 任务的累计处理时间（注：TiKV 会并行处理请求，该时间不是自然流逝时间）
     lock_keys_time: 　　上锁耗时
     lock_keys_time_tooltip: 悲观事务中对相关行数据进行上锁的耗时
     backoff_time: 　　累计重试等待耗时
-    backoff_time_tooltip: 执行过程中遇到锁或者错误后的等待耗时
+    backoff_time_tooltip: 执行过程中遇到锁或者错误后的累计等待耗时（注：可能同时存在多个重试等待，因此该时间可能不是自然流逝时间）
     get_commit_ts_time: 　　取事务 Commit Ts 耗时
     get_commit_ts_time_tooltip: 从 PD 取提交时间戳（事务号）步骤的耗时
     local_latch_wait_time: 　　Local Latch Wait 耗时
@@ -65,8 +65,8 @@ slow_query:
     resolve_lock_time_tooltip: 事务在提交过程中与其他事务产生了锁冲突并处理锁冲突的耗时
     prewrite_time: 　　Prewrite 阶段耗时
     prewrite_time_tooltip: 事务两阶段提交中第一阶段（prewrite 阶段）的耗时
-    wait_prewrite_binlog_time: 　　等 binlog Prewrite 耗时
-    wait_prewrite_binlog_time_tooltip: 等待 binlog prewrite 完成的耗时
+    wait_prewrite_binlog_time: 　　Binlog Prewrite 等待耗时
+    wait_prewrite_binlog_time_tooltip: 等待 Binlog Prewrite 完成的耗时
     commit_time: 　　Commit 阶段耗时
     commit_time_tooltip: 事务两阶段提交中第二阶段（commit 阶段）的耗时
     commit_backoff_time: 　　Commit 重试等待耗时
