--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -46,13 +46,13 @@ slow_query:
     wait_ts: 　　Get Start Ts Time
     wait_ts_tooltip: Time consumed of retrieving the transaction start timestamp when transaction begins
     cop_time: 　　Coprocessor Executor Time
-    cop_time_tooltip: The elapsed wall time when TiDB Coprocessor executor waiting all Coprocessor requests to finish (note: when there are JOIN in SQL statement, multiple TiDB Coprocessor executors may be running in parallel, which may cause this time not being a wall time)
+    cop_time_tooltip: 'The elapsed wall time when TiDB Coprocessor executor waiting all Coprocessor requests to finish (note: when there are JOIN in SQL statement, multiple TiDB Coprocessor executors may be running in parallel, which may cause this time not being a wall time)'
     wait_time: 　　　　Coprocessor Wait Time
     wait_time_tooltip: The total waiting time of Coprocessor request in TiKV
     process_time: 　　　　Coprocessor Process Time
-    process_time_tooltip: The total time of Coprocessor request being executed in TiKV (note: TiKV executes requests in parallel so that this is not a wall time)
+    process_time_tooltip: 'The total time of Coprocessor request being executed in TiKV (note: TiKV executes requests in parallel so that this is not a wall time)'
     backoff_time: 　　Backoff Retry Time
-    backoff_time_tooltip: The total waiting time before retry when a query encounters errors and requires a retry (note: there may be multiple backoff running in parallel so that this may not be a wall time)
+    backoff_time_tooltip: 'The total waiting time before retry when a query encounters errors and requires a retry (note: there may be multiple backoff running in parallel so that this may not be a wall time)'
     lock_keys_time: 　　Lock Keys Time
     lock_keys_time_tooltip: Time consumed when locking keys in pessimistic transaction
     get_commit_ts_time: 　　Get Commit Ts Time
@@ -72,7 +72,7 @@ slow_query:
     write_sql_response_total: 　　Send response Time
     write_sql_response_total_tooltip: Time consumed when sending response to the SQL client
     exec_retry_time: 　　Retry execution Time
-    exec_retry_time_tooltip: Time consumed when retrying the SQL statement execution caused by locks or errors.
+    exec_retry_time_tooltip: Time consumed when retrying the SQL statement execution caused by locks or errors
 
     request_count: Request Count
     process_keys: Process Keys
